--- a/.github/workflows/deploy-mantenimiento.yml
+++ b/.github/workflows/deploy-mantenimiento.yml
@@ -33,19 +33,16 @@ jobs:
           --delete \
           -e "ssh -o StrictHostKeyChecking=no" \
           ./modulos/mantenimiento/ \
-          ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }}:${{ secrets.HOSTINGER_PATH 
-}}/modulos/mantenimiento/
+          ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }}:${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/
           
-    - name: 🔧 Configurar permisos
+   - name: 🔧 Configurar permisos
       run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} "
-          chmod -R 755 ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/
-          find ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/ -type f -exec chmod 644 {} \;
-        "
+        ssh -o StrictHostKeyChecking=no ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
+          "chmod -R 755 ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/ && \
+           find ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/ -type f -exec chmod 644 {} \;"
         
     - name: ✅ Verificar deploy
       run: |
-        echo "✅ Deploy completado exitosamente!"
+        echo "✅ Deploy completado"
         echo "🌐 Sitio: https://erp.batidospitaya.com"
         echo "📁 Carpeta: modulos/mantenimiento/"
-        echo "🕐 Hora: $(date)"
