--- a/.github/workflows/deploy-mantenimiento.yml
+++ b/.github/workflows/deploy-mantenimiento.yml
@@ -14,45 +14,48 @@ jobs:
     - name: 📥 Checkout código
       uses: actions/checkout@v4
       
+    - name: 🔍 Verificar configuración SSH
+      run: |
+        echo "🔧 Verificando configuración..."
+        echo "Host: ${{ secrets.HOSTINGER_HOST }}"
+        echo "Usuario: ${{ secrets.HOSTINGER_USER }}"
+        echo "Path: ${{ secrets.HOSTINGER_PATH }}"
+        
     - name: 🔑 Configurar SSH
       uses: webfactory/ssh-agent@v0.8.0
       with:
         ssh-private-key: ${{ secrets.HOSTINGER_SSH_KEY }}
         
-    - name: 🔍 Verificar conexión SSH
+    - name: 🧪 Test de conectividad SSH
       run: |
-        echo "🔍 Probando conexión SSH..."
-        ssh -o StrictHostKeyChecking=no \
-            -o ConnectTimeout=10 \
-            -o BatchMode=yes \
-            ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
-            "echo '✅ Conexión SSH exitosa'"
-            
-    - name: 🔍 Verificar servidor y puerto
-      run: |
-        echo "🔍 Verificando accesibilidad del servidor..."
-        nc -zv ${{ secrets.HOSTINGER_HOST }} 22 -w 5
+        echo "🧪 Probando conectividad..."
+        # Test básico de ping
+        ping -c 3 ${{ secrets.HOSTINGER_HOST }} || echo "⚠️ Ping falló"
+        
+        # Test de puerto SSH
+        nc -zv ${{ secrets.HOSTINGER_HOST }} 22 || echo "⚠️ Puerto 22 no accesible"
         
     - name: 📤 Sincronizar carpeta mantenimiento
       run: |
         echo "🔄 Sincronizando modulos/mantenimiento/"
         
-        # Verificar que la carpeta local existe
-        if [ ! -d "./modulos/mantenimiento" ]; then
-          echo "❌ La carpeta local ./modulos/mantenimiento no existe"
-          exit 1
-        fi
+        # Verificar que la clave SSH funciona
+        ssh -o StrictHostKeyChecking=no \
+            -o ConnectTimeout=10 \
+            -o BatchMode=yes \
+            ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
+            "echo '✅ Conexión SSH exitosa'"
         
-        # Crear la carpeta remota si no existe
+        # Crear la carpeta si no existe
         ssh -o StrictHostKeyChecking=no \
             -o ConnectTimeout=10 \
             ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
             "mkdir -p ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento"
         
-        # Sincronizar la carpeta
+        # Sincronizar la carpeta completa
         rsync -avz \
-          --progress \
           --delete \
+          --progress \
           -e "ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10" \
           ./modulos/mantenimiento/ \
           ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }}:${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/
@@ -67,10 +70,6 @@ jobs:
         
     - name: ✅ Verificar deploy
       run: |
-        echo "✅ Deploy completado exitosamente"
+        echo "✅ Deploy completado"
         echo "🌐 Sitio: https://erp.batidospitaya.com"
         echo "📁 Carpeta: modulos/mantenimiento/"
-        echo "📊 Verificando archivos desplegados..."
-        ssh -o StrictHostKeyChecking=no \
-            ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
-            "ls -la ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/"
