--- a/.github/workflows/deploy-mantenimiento.yml
+++ b/.github/workflows/deploy-mantenimiento.yml
@@ -23,27 +23,22 @@ jobs:
       run: |
         echo "🔄 Sincronizando modulos/mantenimiento/"
         
-        # Crear la carpeta si no existe (usando puerto 65002)
-        ssh -o StrictHostKeyChecking=no \
-            -p 65002 \
-            ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
-            "mkdir -p ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento"
+        # Crear la carpeta si no existe
+        ssh -o StrictHostKeyChecking=no ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
+          "mkdir -p ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento"
         
-        # Sincronizar la carpeta completa (usando puerto 65002)
+        # Sincronizar la carpeta completa
         rsync -avz \
           --delete \
-          --progress \
-          -e "ssh -o StrictHostKeyChecking=no -p 65002" \
+          -e "ssh -o StrictHostKeyChecking=no" \
           ./modulos/mantenimiento/ \
           ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }}:${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/
           
     - name: 🔧 Configurar permisos
       run: |
-        ssh -o StrictHostKeyChecking=no \
-            -p 65002 \
-            ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
-            "chmod -R 755 ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/ && \
-             find ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/ -type f -exec chmod 644 {} \;"
+        ssh -o StrictHostKeyChecking=no ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
+          "chmod -R 755 ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/ && \
+           find ${{ secrets.HOSTINGER_PATH }}/modulos/mantenimiento/ -type f -exec chmod 644 {} \;"
         
     - name: ✅ Verificar deploy
       run: |
