--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Excluir TODO en la raíz EXCEPTO lo permitido
 /*
 !/.gitignore
+!/.scripts/
 !/modulos/
 
 # Excluir todo en modulos EXCEPTO los modulos permitidos (15 en total)
